manifest/apps/user/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-services
  namespace: be-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-services
  template:
    metadata:
      name: user-services
      labels:
        app: user-services
    spec:
      containers:
        - name: user-services-container
          image: nvlannasik/user-services-go:release-0.1.8
          ports:
            - name: user-services
              containerPort: 8080
          resources:
            limits:
              memory: 256Mi
              cpu: 200m
            requests:
              memory: 128Mi
              cpu: 100m

          volumeMounts:
            - name: app-dir
              mountPath: /app
              readOnly: true

      volumes:
        - name: app-dir
          emptyDir: {}
        - name: script
          configMap:
            name: script-add-env-from-secret
