manifest/apps/user/service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-services-svc
  namespace: be-user
spec:
  selector:
    app: user-services
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
